# openassets-rust

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/openassets/: address.rs  asset_id.rs  marker_output.rs  mod.rs
